# Steamapi

./: .flake8  .gitignore  config.py  main.py  pyproject.toml
Steam2/: __init__.py  forms.py  routes.py
Steam2/static/: style.css
Steam2/templates/: Main.html  base.html  index.html  test.html
tests/: conftest.py  test_exists.py  test_qr.py
